--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       
         <a-marker type='barcode' value='0'>
    
-            <a-text value="Hello !" 
+            <a-text value="ca va bien ou quoi?!" 
             side="double" position = "0 0 -1" rotation="270 0 0" 
             width="8"
-            color="red" align="center" >
+            color="pink" align="center" >
             </a-text>
 
         </a-marker>
